# ossim-ubuntu

./: .gitignore  README.md  gradle.properties
builder/: build-ossim.sh  checkout-ossim.sh
builder-image/: Dockerfile  build.sh
builder-image/build-scripts/: build-deps.sh  build-ffmpeg.sh  build-hdf5.sh  build-kakadu.sh  build-szip.sh  build-x264.sh  build-x265.sh
builder-image/checkout-scripts/: checkout-deps.sh  checkout-ffmpeg.sh  checkout-hdf5.sh  checkout-kakadu.sh  checkout-szip.sh  checkout-x264.sh  checkout-x265.sh
builder-image/ossim-repos/ossim-deepcore/: CMakeLists.txt  README.md
builder-image/ossim-repos/ossim-deepcore/scripts/: docker-run.sh  ossim-deepcore-env.sh
builder-image/ossim-repos/ossim-deepcore/scripts/ossim-build-context/: Dockerfile
builder-image/ossim-repos/ossim-deepcore/src/: CMakeLists.txt  ossimDeepCoreNitfProjection.cpp  ossimDeepCoreNitfProjection.h  ossimDeepCoreToolFactory.h  ossimImgToGeoTool.cpp
builder-image/ossim-repos/ossim-qt4/: CMakeLists.txt  README.md
builder-image/ossim-repos/ossim-qt4/scripts/: build-ossim-qt4.sh
builder/ossim-repos/ossim-deepcore/: .gitignore  Jenkinsfile  LICENSE  ossim-deepcore.info.yml
compile-ossim/: build.sh  checkout-ossim.sh
compile-ossim/build-scripts/: build-joms.sh  build-ossim.sh
dev/: Dockerfile  Dockerfile-dist  build-dist.sh  build-docker.sh  build-joms.sh  build-kakadu.sh  build-ossim.sh  checkout-ossim.sh  export-dist.sh  run-dist.sh  run-docker.sh  tag_and_push.sh
jenkins/: ossim-minimal-builder-ubuntu.groovy  ossim-minimal-runtime-ubuntu.groovy
jenkins-builder/: Jenkinsfile
jenkins-runtime/: Jenkinsfile
runtime/: Dockerfile  build-docker.sh  dataInfo.sh  run-docker.sh
(+35 files in other folders)
